# attol

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  gettransition.sh  strip_weights.sh
data/: dangling.att  flag.test.BOM.txt  flag.test.latin2.txt  flag.test.txt  flag.test.win.txt  flags.BOM.att  flags.att  flags.latin2.att  flags.win.att  identity.att  identity.input  identity.win.att  identity.win.input
inc/: ArgParser.h
inc/attol/: Char.h  FlagDiacritics.h  Print.h  Record.h  Transducer.h  Utils.h  char.h
src/: attol-utf8.cpp  attol.cpp  char.cpp  matrix.cpp
